# first-stream-clock

./: .gitignore  Cargo.toml  HANDOFF-MAC.md  HANDOFF.md  LICENSE  README.en.md  README.md  THIRD-PARTY-NOTICES.md  build.rs  deploy.sh
appstore/: .gitignore  metadata.json  sign_and_pkg.sh
appstore/asc/: asc_common.py  poll_and_attach.py  push_metadata.py  upload_screenshots.py
assets/icon/: AppIcon.icns
docs/: privacy.html  support.html
legacy/: StreamClock.bat  StreamClock.ps1  StreamClock.vbs
macos/: ENTITLEMENTS.md  StreamClock.entitlements
src/: ltc.rs  ltc_out.rs  main.rs  mtc.rs  mtc_out.rs  ntp.rs  osc.rs  ptp.rs  tc.rs
