[package]
name = "stream-clock"
version = "1.0.0"
edition = "2021"
description = "Digital clock overlay with stopwatch, synced time sources, and LTC/MTC timecode output"
license = "MIT"

[features]
default = ["full-sources"]
full-sources = ["dep:midir", "dep:cpal", "dep:rosc", "dep:mdns-sd", "tc-out"]
tc-out = ["dep:midir", "dep:cpal"]

[dependencies]
eframe = { version = "0.34", features = ["persistence"] }
chrono = "0.4"
midir = { version = "0.11", optional = true }
cpal = { version = "0.18", optional = true }
rosc = { version = "0.11", optional = true }
mdns-sd = { version = "0.20", optional = true }
serde = { version = "1", features = ["derive"] }
if-addrs = "0.13"
# Needed to create an UNBOUND UDP socket: the macOS App Sandbox denies bind(2) with only
# com.apple.security.network.client. See ntp::unbound_udp_v4.
socket2 = "0.6"

[profile.release]
opt-level = 3
lto = true
strip = true

# macOS .app bundling (cargo-bundle). Used for the Mac App Store build, which MUST be
# built with `--no-default-features --features tc-out` (NTP + System sources, LTC/MTC output).
# Full build/signing/.pkg flow: see first-stream-clock-mobile/HANDOFF-APPSTORE.md §6.
[package.metadata.bundle]
name = "StreamClock"
identifier = "net.firstcallmusic.streamclock"
category = "public.app-category.utilities"
short_description = "JST clock overlay with NTP sync and stopwatch"
icon = ["assets/icon/AppIcon.icns"]
osx_minimum_system_version = "11.0"
